--- a/homework/Calculator.html
+++ b/homework/Calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
 
     <style>
          *{
@@ -75,8 +75,10 @@
         </tr>
 
         <tr>
-            <td colspan="2" class="cal2"><button id="button1">BackSpace</button></td>
-            <td colspan="2" class="cal2"><button id="button1">C</button></td>   
+            <td colspan="2" class="cal2">
+                <button id="button1" onclick="backSpace();">BackSpace</button></td>
+            <td colspan="2" class="cal2">
+                <button id="button1" onclick="clearScreen();">C</button></td>   
         </tr>
         <tr>
             <td class="cal3"><button id="button2">1</button></td>
